# kam-ai

./: .gitignore  DECISIONS.md  DESIGN.md  LAUNCH.md  MASTER_SPEC.md  PRIVACY.md  README.md  WORKLIST.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.kamsiob.kamai.data.KamDatabase/: 1.json  2.json  3.json  4.json  5.json
app/src/androidTest/java/com/kamsiob/kamai/: BackNavigationTest.kt  ConfirmDialogTest.kt  PrivacyClaimsTest.kt
app/src/androidTest/java/com/kamsiob/kamai/data/: BackupDbRoundTripTest.kt  EncryptionMigrationTest.kt  PassphraseLayerTest.kt  SchemaMigrationTest.kt
app/src/androidTest/java/com/kamsiob/kamai/files/: FileExtractorTest.kt
app/src/androidTest/java/com/kamsiob/kamai/llm/: Gemma4LoadTest.kt  LlamaBridgeSmokeTest.kt
app/src/androidTest/java/com/kamsiob/kamai/voice/: TtsSynthesizeTest.kt  WhisperTranscribeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  kamai_llama.cpp  kamai_whisper.cpp
app/src/main/java/com/k2fsa/sherpa/onnx/: Tts.kt
app/src/main/java/com/kamsiob/kamai/: CrashLog.kt  KamApp.kt  MainActivity.kt
app/src/main/java/com/kamsiob/kamai/assist/: AssistantRole.kt  Handoff.kt  KamAssistService.kt  KamAssistSessionService.kt  KamRecognitionService.kt  OverlayActivity.kt  OverlayViewModel.kt
app/src/main/java/com/kamsiob/kamai/data/: BackupCodec.kt  BackupCrypto.kt  BackupManager.kt  Daos.kt  DatabaseEncryption.kt  DatabaseKey.kt  Entities.kt  KamDatabase.kt  KamRepository.kt
app/src/main/java/com/kamsiob/kamai/discover/: DiscoverModels.kt  PackReader.kt
app/src/main/java/com/kamsiob/kamai/download/: DownloadService.kt  Downloader.kt  Downloads.kt
app/src/main/java/com/kamsiob/kamai/files/: FileExtractor.kt
app/src/main/java/com/kamsiob/kamai/integrations/: Intake.kt  KamTileService.kt  KamWidgetProvider.kt  TextIntakeActivity.kt
app/src/main/java/com/kamsiob/kamai/llm/: AndroidMemoryGauge.kt  ChatFormat.kt  ConversationTitler.kt  InferenceEngine.kt  LlamaBridge.kt  Memory.kt  ModelManager.kt  ModelRuntime.kt  Models.kt  PromptBuilder.kt  SystemPrompts.kt
app/src/main/java/com/kamsiob/kamai/lock/: AppLock.kt  Biometric.kt  KamRoot.kt  LockScreen.kt  LockSettingsScreen.kt
app/src/main/java/com/kamsiob/kamai/model/: ModelCatalog.kt  ModelTier.kt
app/src/main/java/com/kamsiob/kamai/ui/: AppViewModel.kt  BackNavigation.kt  KamAiApp.kt  Links.kt  Share.kt
app/src/main/java/com/kamsiob/kamai/ui/chat/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/com/kamsiob/kamai/ui/chats/: ChatsScreen.kt
app/src/main/java/com/kamsiob/kamai/ui/components/: Common.kt  Confirm.kt  DownloadControls.kt  KamMark.kt  Markdown.kt  ModeSegmentedControl.kt  ModeUi.kt  SelectionActions.kt  Shell.kt
app/src/main/java/com/kamsiob/kamai/ui/discover/: DiscoverScreen.kt  DiscoverSheets.kt  DiscoverViewModel.kt
app/src/main/java/com/kamsiob/kamai/ui/followups/: FollowUpsScreen.kt
app/src/main/java/com/kamsiob/kamai/ui/onboarding/: OnboardingCopy.kt  OnboardingScreen.kt
app/src/main/java/com/kamsiob/kamai/ui/projects/: ProjectsScreen.kt
app/src/main/java/com/kamsiob/kamai/ui/settings/: AppearanceScreen.kt  BackupScreen.kt  ModelScreen.kt  QuestionsAndAnswers.kt  SettingsScreens.kt  VoiceScreen.kt
app/src/main/java/com/kamsiob/kamai/ui/theme/: Accents.kt  Appearance.kt  Color.kt  Motion.kt  Theme.kt  Type.kt
app/src/main/java/com/kamsiob/kamai/ui/workbench/: WorkbenchScreen.kt  WorkbenchViewModel.kt
app/src/main/java/com/kamsiob/kamai/voice/: AudioRecorder.kt  SttCatalog.kt  SttEngine.kt  TtsCatalog.kt  TtsEngine.kt  Voice.kt  WhisperBridge.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_splash_mark.xml  widget_bg.xml  widget_pill_accent.xml  widget_pill_surface.xml
app/src/main/res/layout/: widget_kam.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml  kam_assist.xml  kam_widget_info.xml
app/src/test/java/com/kamsiob/kamai/data/: BackupRoundTripTest.kt  FollowUpStateTest.kt  KamDatabaseTest.kt  ModelManagementTest.kt
app/src/test/java/com/kamsiob/kamai/discover/: PackDealTest.kt
app/src/test/java/com/kamsiob/kamai/llm/: ChatFormatTest.kt  ConversationTitlerTest.kt  FormattingGuidanceTest.kt  InstructionPrecedenceTest.kt  MemoryExtractorTest.kt  MemoryRetrievalTest.kt  ModeSwitchTest.kt  ModelManagerTest.kt  PromptBudgetTest.kt  SystemPromptsTest.kt
app/src/test/java/com/kamsiob/kamai/lock/: AppLockStateTest.kt
app/src/test/java/com/kamsiob/kamai/model/: TierRecommendationTest.kt
app/src/test/java/com/kamsiob/kamai/ui/: ConversationVmKeyTest.kt  ShareRenderTest.kt
app/src/test/java/com/kamsiob/kamai/ui/chat/: ThinkingIndicatorTest.kt
app/src/test/java/com/kamsiob/kamai/ui/components/: MarkdownParseTest.kt
app/src/test/java/com/kamsiob/kamai/ui/theme/: AccentContrastTest.kt  DesignTokensTest.kt
docs/: TODAY_SPEC.md  index.md
gradle/: libs.versions.toml
tools/: cut_release.sh  fetch_llama.sh  fetch_sherpa.sh  fetch_smoke_model.sh  fetch_whisper.sh  make_store_assets.py  play_publish.py  shot.sh
tools/discover/: build_packs.py  exclude.txt  packs_config.json  publish.sh
tools/play/: listing.json
